crates/test-better/tests/ui/fixture_bad_scope.stderr
error: unknown fixture scope "global", expected "test" or "module"
 --> tests/ui/fixture_bad_scope.rs:4:19
  |
4 | #[fixture(scope = "global")]
  |                   ^^^^^^^^
